# beancount-cli

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  CODING_AGENTS.md  README.md  implementation_plan.md  mypy_out.txt  pyproject.toml  pytest_out.txt  pytest_out2.txt
.agent/skills/beancount_cli/: SKILL.md
.github/workflows/: ci.yml
docs/: beancount_ecosystem_analysis.md  bkper.md  implementation_plan.md
src/beancount_cli/: adapters.py  cli.py  config.py  formatting.py  models.py  services.py
src/beancount_cli/commands/: account.py  commodity.py  common.py  price.py  report.py  root.py  transaction.py
tests/: conftest.py  smoke_test.py  test_advanced.py  test_bql.py  test_cli.py  test_config.py  test_coverage_gap.py  test_models.py  test_services.py
