[project]
name = "beancount-cli"
version = "0.2.1"
description = "A CLI tool to manage Beancount ledgers"
readme = "README.md"
authors = [
    { name = "Roman Medvedev", email = "pypi@romavm.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "beancount>=3.0.0",
    "beanquery>=0.1.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "beanprice>=2.1.0",
    "pydantic-settings>=2.0.0",
    "argcomplete>=3.6.3",
]
keywords = ["beancount", "cli", "accounting", "automation", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Accounting",
]

[project.urls]
Homepage = "https://github.com/romamo/beancount-cli"
Repository = "https://github.com/romamo/beancount-cli"
Issues = "https://github.com/romamo/beancount-cli/issues"

[project.scripts]
bean = "beancount_cli.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/beancount_cli",
    "tests",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
]
exclude = [
    ".agent",
    ".github",
    "uv.lock",
    "tmp",
    "dist",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beancount_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "mypy>=1.19.1",
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]


